--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,7 @@
 	<html>
 		<head>
 			<title>My Portfolio</title>
+			<link rel="stylesheet" type="text/css" href="portfolio.css">
 		</head>
 		<body>
 			<h1>Name</h1>
