--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 	<html>
 		<head>
 			<title>My Portfolio</title>
-			<link rel="stylesheet" type="Portfolio/portfolio-style.css" href="portfolio.css">
+			<link rel="stylesheet" href="Portfolio/portfolio-style.css"/>
 		</head>
 		<body>
 			<h1>Name</h1>
