--- a/portfolio.html
+++ b/portfolio.html
@@ -1,22 +1,37 @@
-<!DOCTYPE html>
-	<html>
-		<head>
-			<title>My Portfolio</title>
-			<link rel="stylesheet" href="Portfolio/portfolio-style.css"/>
-		</head>
-		<body>
-			<h1>Name</h1>
-			<h2>Bader Ealyyah</h2>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-			<h1>Email address</h1>
-			<h2>bader.al.ealyyah@gmail.com</h2>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-			<h1>GitHub page</h1>
-			<h2>Link to my GitHub page</h2>
-			<a href="https://github.com/bnmre81">bnmre81</a>
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="portfolio-style.css"/>
+  </head>
+  <body class="bg-secondary text-white">
+    
+  <div class="container text-center">
+  	<h1 class="display-1 mt-5">My Portfolio</h1>
+    <h1 class="h1">Name:</h1>
+	<h2>Bader Ealyyah</h2>
 
-			<h1>Hobbies and interests</h1>
-			<h2>Philosophy, science, literature, and technology</h2>
-		
-		</body>
-	</html>
+	<h1>Email address:</h1>
+	<h2>bader.al.ealyyah@gmail.com</h2>
+
+	<h1>GitHub page:</h1>
+	<h2>Link to my GitHub page</h2> 
+	<a href="https://github.com/bnmre81">bnmre81</a>
+
+	<h1>Hobbies and interests:</h1>
+	<h2>Philosophy, science, literature, and technology</h2>
+   </div>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  </body>
+</html>
