html of my portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,25 +9,53 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="portfolio-style.css"/>
+    <link rel="stylesheet" type="text/css" href="portfolio-style.css"/>
   </head>
-  <body class="bg-secondary text-white">
+  <body class="bg-secondary">
     
   <div class="container text-center">
   	<h1 class="display-1 mt-5">My Portfolio</h1>
-    <h1 class="h1">Name:</h1>
-	<h2>Bader Ealyyah</h2>
+  </div>
 
-	<h1>Email address:</h1>
-	<h2>bader.al.ealyyah@gmail.com</h2>
+  <div class="container">
 
-	<h1>GitHub page:</h1>
-	<h2>Link to my GitHub page</h2> 
-	<a href="https://github.com/bnmre81">bnmre81</a>
+  <div class="row">
+  <div class="col-sm-4">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title"><u>Name and E-mail</u></h5>
+        <p class="card-text">Bader Ealyyah</p>
+        <p>email address:</p> 
+        <p>bader.al.ealyyah@gmail.om</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title"><u>GitHub:</u></h5>
+        <p class="card-text">Link to my GitHub page</p>
+        <a href="https://github.com/bnmre81">bnmre81</a>
+      </div>
+    </div>
+  </div>
 
-	<h1>Hobbies and interests:</h1>
-	<h2>Philosophy, science, literature, and technology</h2>
+<div class="col-sm-4">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title"><u>Hobbies and interests:</u></h5>
+        <ul>
+        	<li>Philosophy</li>
+        	<li>Science and Technology</li>
+        	<li>Anime</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
    </div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
